# latticebridge

./: .gitignore  CITATION.cff  LICENSE  README.md  cscl_attribute_doob_splitting_lab.py  pyproject.toml
artifacts/: tokenizer_core.json  tokenizer_structured.json
artifacts/checkpoints_core/: train_report.json
artifacts/checkpoints_structured/: train_report.json
data/manifests/: core_benchmark.json  datasets.json  structured_benchmark.json
paper/: latticebridge.tex  references.bib
results/: conflict_probe_mps.txt  scale_probe_mps_heavy.txt  scale_probe_mps_medium.txt
results/benchmark_core_fast/: validation_summary.json
results/benchmark_core_validation/: validation_config.json  validation_summary.json  validation_tasks.json
results/benchmark_structured_validation/: example_diagnostics.json  validation_config.json  validation_summary.json  validation_tasks.json
src/latticebridge/: __init__.py  cli.py
src/latticebridge/benchmarks/: generation.py
src/latticebridge/constraints/: phrase_automaton.py
src/latticebridge/data/: adapters.py  download.py  records.py
src/latticebridge/experiments/: diagnostics.py  evaluate.py  figures.py  prepare.py  train.py
src/latticebridge/lab/: synthetic.py
src/latticebridge/metrics/: text.py
src/latticebridge/models/: prefix_lm.py  tokenizer.py
src/latticebridge/utils/: env.py  seed.py
tests/: test_benchmark_selection.py
